--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,14 +4,16 @@ on: [push]
 
 jobs:
   build:
-
+    strategy:
+      matrix:
+        jdk: [ 8, 11, 17 ]
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        java-version: 11
+        java-version: ${{ matrix.jdk }}
         distribution: 'temurin'
         cache: 'maven'
-    - run: mvn -B verify
+    - run: mvn --batch-mode --show-version --no-transfer-progress -DCI=GitHub install
