--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,16 +4,13 @@ on: [push]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        jdk: [ 8, 11, 17 ]
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        java-version: ${{ matrix.jdk }}
+        java-version: 11
         distribution: 'temurin'
         cache: 'maven'
     - run: mvn --batch-mode --show-version --no-transfer-progress -DCI=GitHub install
