--- a/pom.xml
+++ b/pom.xml
@@ -16,17 +16,18 @@
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
 
-        <lombok.version>1.18.18</lombok.version>
+        <lombok.version>1.18.24</lombok.version>
         <microprofile.version>3.3</microprofile.version>
-        <slf4j.version>1.7.30</slf4j.version>
+        <slf4j.version>1.7.36</slf4j.version>
         <resteasy.version>3.15.3.Final</resteasy.version>
-        <snakeyaml.version>1.28</snakeyaml.version>
-        <hibernate.version>6.2.0.Final</hibernate.version>
+        <snakeyaml.version>1.33</snakeyaml.version>
+        <hibernate.version>6.2.5.Final</hibernate.version>
 
-        <assertj.version>3.22.0</assertj.version>
+        <assertj.version>3.23.1</assertj.version>
         <junit.version>5.9.1</junit.version>
-        <mockito.version>4.3.1</mockito.version>
-        <jee-testcontainers.version>1.9.0</jee-testcontainers.version>
+        <mockito.version>4.8.0</mockito.version>
+        <jee-testcontainers.version>1.10.0</jee-testcontainers.version>
+        <logback.version>1.2.11</logback.version>
     </properties>
 
     <developers>
