--- a/test-spring/pom.xml
+++ b/test-spring/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>2.7.6</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
@@ -28,7 +28,7 @@
     <licenses>
         <license>
             <name>Apache License 2.0</name>
-            <url>http://choosealicense.com/licenses/apache-2.0/</url>
+            <url>https://choosealicense.com/licenses/apache-2.0/</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
