fix multiple violations at a single path

--- a/ri-lib/pom.xml
+++ b/ri-lib/pom.xml
@@ -96,5 +96,11 @@
             <version>1.0.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
