--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.t1</groupId>
     <artifactId>problem-details</artifactId>
-    <version>1.0.11-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Problem Details</name>
     <description>Problem Details [RFC-7807] Java API, TCK, and implementations for JAX-RS and Spring Boot</description>
@@ -19,14 +19,13 @@
         <lombok.version>1.18.24</lombok.version>
         <microprofile.version>3.3</microprofile.version>
         <slf4j.version>1.7.36</slf4j.version>
-        <resteasy.version>3.15.3.Final</resteasy.version>
-        <snakeyaml.version>1.33</snakeyaml.version>
-        <hibernate.version>6.2.5.Final</hibernate.version>
+        <resteasy.version>6.2.2.Final</resteasy.version>
+        <hibernate.version>8.0.0.Final</hibernate.version>
 
         <assertj.version>3.23.1</assertj.version>
         <junit.version>5.9.1</junit.version>
         <mockito.version>4.8.0</mockito.version>
-        <jee-testcontainers.version>1.9.0</jee-testcontainers.version>
+        <jee-testcontainers.version>2.0</jee-testcontainers.version>
         <logback.version>1.2.11</logback.version>
     </properties>
 
@@ -148,7 +147,7 @@
         <module>ri</module>
         <module>ri-lib</module>
         <module>ri-spring</module>
-        <module>test-spring</module>
+        <!--<module>test-spring</module>-->
         <module>test</module>
     </modules>
 
