--- a/ri-spring/pom.xml
+++ b/ri-spring/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.github.t1</groupId>
     <artifactId>problem-details-ri-spring</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <description>Problem Detail implementation for Spring Boot</description>
     <url>https://github.com/t1/problem-details</url>
 
@@ -41,7 +41,7 @@
         </snapshotRepository>
     </distributionManagement>
     <scm>
-        <tag>v2.0.0</tag>
+        <tag>HEAD</tag>
         <developerConnection>scm:git:https://github.com/t1/problem-details.git</developerConnection>
         <url>https://github.com/t1/problem-details.git</url>
     </scm>
@@ -114,12 +114,12 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-api</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>problem-details-ri-lib</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
