--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,12 +5,15 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        jdk: [ 11, 17 ]
 
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        java-version: 11
+        java-version: ${{matrix.jdk}}
         distribution: 'temurin'
         cache: 'maven'
     - run: mvn --batch-mode --show-version --no-transfer-progress -DCI=GitHub install
