fix maven-war-plugin to version 3.3.2 or the GitHub Action defaults to 2.2 and fails

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -23,6 +23,13 @@
     <build>
         <defaultGoal>verify</defaultGoal>
         <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
