--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -139,7 +139,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
